Add .vscode/ and prisma

--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ dist
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
-.vscode-test
+.vscode/
 
 # yarn v3
 .pnp.*
@@ -137,3 +137,5 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+/generated/prisma
