--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Petra-78/file-uploader#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@quixo3/prisma-session-store": "^3.1.13",
